@@ -1,12 +1,19 @@
 buildscript{
     ext{
-        getArcHash = {
-            return new Properties().with{ p -> p.load(file('gradle.properties').newReader()); return p }["archash"]
+        arcHash = property("archash")
+
+        localArc = !project.hasProperty("release") && new File(rootDir.parent, 'Arc').exists() && !project.hasProperty("noLocalArc")
+
+        arcModule = { String name ->
+            //skip to last submodule
+            name = name.substring(name.lastIndexOf(':') + 1)
+            return "com.github.mindustry-antigrief${localArc ? "" : ".arc"}:$name:$arcHash"
+            // TODO: Merge recheck: Merge bala's arc
         }
 
-        arcHash = getArcHash()
+        branchName = 'git branch --show-current'.execute().text.trim()
     }
-    
+
     repositories{
         mavenLocal()
         mavenCentral()
@@ -16,34 +23,33 @@ buildscript{
     }
 
     dependencies{
-        classpath "com.mobidevelop.robovm:robovm-gradle-plugin:2.3.14"
-        classpath "com.github.Anuken.Arc:packer:$arcHash"
-        classpath "com.github.Anuken.Arc:arc-core:$arcHash"
+        classpath "com.mobidevelop.robovm:robovm-gradle-plugin:2.3.16"
+        classpath arcModule(":extensions:packer")
+        classpath arcModule(":arc-core")
     }
 }
 
 plugins{
-    id "org.jetbrains.kotlin.jvm" version "1.6.20"
-    id "org.jetbrains.kotlin.kapt" version "1.6.20"
-    id "com.google.devtools.ksp" version "1.6.20-1.0.4"
+    id "org.jetbrains.kotlin.jvm" version "1.7.20"
+    id "org.jetbrains.kotlin.kapt" version "1.7.20" apply false
 }
 
 allprojects{
-    apply plugin: 'maven-publish'
-    
-    version = 'release'
-    group = 'com.github.Anuken'
+    version = project.hasProperty("packageVersion") ? project.getProperty("packageVersion") : 'release'
+    group = 'com.github.mindustry-antigrief'
 
     ext{
         versionNumber = '7'
         if(!project.hasProperty("updateUrl")) updateUrl = ''
-        if(!project.hasProperty("versionModifier")) versionModifier = 'pre-alpha'
-        if(!project.hasProperty("buildversion")) buildversion = '135'
+        if(!project.hasProperty("assetUrl")) assetUrl = 'mindustry-antigrief/mindustry-client'
+        if(!project.hasProperty("assetRef")) assetRef = 'v7'
+        if(!project.hasProperty("versionModifier")) versionModifier = 'release'
+        if(!project.hasProperty("buildversion")) buildversion = '140.4' // Modders use BE build numbers which is stupid
         if(!project.hasProperty("clientVersion")) clientVersion = 'v1.0.0, Jan. 1, 1970'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
         steamworksVersion = '0b86023401880bb5e586bc404bedbaae9b1f1c94'
-        rhinoVersion = '3c6bbadf73a904eefcc28b6fd8aa742ac575e878'
+        rhinoVersion = '73a812444ac388ac2d94013b5cadc8f70b7ea027'
 
         loadVersionProps = {
             return new Properties().with{p -> p.load(file('../core/assets/version.properties').newReader()); return p }
@@ -51,20 +57,6 @@ allprojects{
 
         debugged = {
             return new File(projectDir.parent, '../Mindustry-Debug').exists() && !project.hasProperty("release") && project.hasProperty("args")
-        }
-
-        localArc = {
-            return !project.hasProperty("release") && new File(projectDir.parent, '../Arc').exists()
-        }
-
-        arcModule = { String name ->
-            if(localArc()){
-                return project(":Arc:$name")
-            }else{
-                //skip to last submodule
-                if(name.contains(':')) name = name.split(':').last()
-                return "com.github.Anuken.Arc:$name:${getArcHash()}"
-            }
         }
 
         generateDeployName = { String platform ->
@@ -143,9 +135,10 @@ allprojects{
 
                 String buildid = getBuildVersion()
                 println("Compiling with build: '$buildid'")
-                if (localArc()) println("Compiling with localArc")
 
                 props["updateUrl"] = updateUrl
+                props["assetUrl"] = assetUrl
+                props["assetRef"] = assetRef
                 props["clientVersion"] = clientVersion
                 props["type"] = versionType
                 props["number"] = versionNumber
@@ -193,19 +186,15 @@ allprojects{
         maven{ url 'https://jitpack.io' }
     }
 
-    task clearCache{
-        doFirst{
-            delete{
-                delete "$rootDir/core/assets/cache"
-            }
-        }
+    task clearCache(type: Delete){
+        delete "$rootDir/core/assets/cache"
     }
 
     tasks.withType(JavaCompile){
         targetCompatibility = JavaVersion.VERSION_1_8
         sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
-        options.compilerArgs += ["-Xlint:deprecation", "-Xmaxerrs", "5000"]
+        options.compilerArgs += ["-Xmaxerrs", "5000", "-Xlint:deprecation"]
         dependsOn clearCache
 
         options.forkOptions.jvmArgs += [
@@ -216,16 +205,8 @@ allprojects{
             '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+            '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
         ]
-    }
-}
-
-configure(project(":annotations")){
-    tasks.withType(JavaCompile){
-        targetCompatibility = 8
-        sourceCompatibility = 8
-        options.fork = true
     }
 }
 
@@ -239,6 +220,7 @@ configure(subprojects - project(":annotations")){
         options{
             addStringOption('Xdoclint:none', '-quiet')
             addStringOption('-release', '16')
+            encoding('UTF-8')
         }
     }
 }
@@ -246,7 +228,7 @@ configure(subprojects - project(":annotations")){
 project(":desktop"){
     apply plugin: "java"
 
-    compileJava.options.fork = true
+//    compileJava.options.fork = true
 
     dependencies{
         implementation project(":core")
@@ -257,61 +239,25 @@ project(":desktop"){
         if(debugged()) implementation project(":debug")
 
         implementation "com.github.Anuken:steamworks4j:$steamworksVersion"
+//        implementation "com.github.mindustry-antigrief.steamworks4j:steamworks4j:master-SNAPSHOT" // Steamworks4j fork
+//        implementation "com.github.mindustry-antigrief:steamworks4j:1.10.0-SNAPSHOT" // Local steamworks4j
 
         implementation arcModule("backends:backend-sdl")
     }
 }
 
-project(":ios"){
-    apply plugin: "java"
-    apply plugin: "robovm"
-
-    task incrementConfig{
-        def vfile = file('robovm.properties')
-        def bversion = getBuildVersion()
-        def props = new Properties()
-        if(vfile.exists()){
-            props.load(new FileInputStream(vfile))
-        }else{
-            props['app.id'] = 'io.anuke.mindustry'
-            props['app.version'] = '7.0'
-            props['app.mainclass'] = 'mindustry.IOSLauncher'
-            props['app.executable'] = 'IOSLauncher'
-            props['app.name'] = 'Mindustry'
-        }
-        
-        props['app.build'] = (!props.containsKey("app.build") ? 40 : props['app.build'].toInteger() + 1) + ""
-        if(bversion != "custom build"){
-            props['app.version'] = versionNumber + "." + bversion + (bversion.contains(".") ? "" : ".0")
-        }
-        props.store(vfile.newWriter(), null)
-    }
-
-    dependencies{
-        implementation project(":core")
-
-        implementation arcModule("natives:natives-ios")
-        implementation arcModule("natives:natives-freetype-ios")
-        implementation arcModule("backends:backend-robovm")
-
-        compileOnly project(":annotations")
-    }
-}
-
 project(":core"){
-    apply plugin: "java-library"
     apply plugin: "kotlin"
     apply plugin: "kotlin-kapt"
-    apply plugin: "com.google.devtools.ksp"
 
-    compileJava.options.fork = true
+//    compileJava.options.fork = true
 
     task preGen{
         outputs.upToDateWhen{ false }
         generateLocales()
         writeVersion()
-        writeProcessors()
-        writePlugins()
+//        writeProcessors()
+//        writePlugins()
     }
 
     task copyChangelog{
@@ -362,22 +308,44 @@ project(":core"){
         archives assetsJar
     }
 
+    kapt {
+        showProcessorStats = true
+        keepJavacAnnotationProcessors = true
+        javacOptions{
+            option("-source", "16")
+            option("-target", "8")
+        }
+    }
+
+    tasks.withType(org.jetbrains.kotlin.gradle.internal.KaptWithoutKotlincTask.class).configureEach {
+        kaptProcessJvmArgs.addAll([
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ])
+    }
+
     dependencies{
         compileJava.dependsOn(preGen)
 
-        api "org.lz4:lz4-java:1.7.1"
+        api "org.lz4:lz4-java:1.8.0"
         api arcModule("arc-core")
+        if(localArc && project.hasProperty("debug")) implementation arcModule("extensions:profiling")
         api arcModule("extensions:flabel")
         api arcModule("extensions:freetype")
         api arcModule("extensions:g3d")
         api arcModule("extensions:fx")
         api arcModule("extensions:arcnet")
         api "com.github.Anuken:rhino:$rhinoVersion"
-        if(localArc() && debugged()) api arcModule("extensions:recorder")
-        if(localArc()) api arcModule(":extensions:packer")
+        if(localArc && debugged()) api arcModule("extensions:recorder")
+        if(localArc) api arcModule(":extensions:packer")
 
-        implementation "com.beust:klaxon:5.4" // Yes, I'm aware arc has a json system, but I don't know how to use it.
-        implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.20"
+        implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.20"
 //        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0" Unused, removed to reduce jar size
 
         compileOnly files("../bouncycastle/bcprov-jdk15on.jar")
@@ -387,31 +355,32 @@ project(":core"){
         compileOnly arcModule("backends:backend-sdl")
         implementation 'commons-net:commons-net:3.8.0'
 
-        annotationProcessor 'com.github.Anuken:jabel:0.6.0'
         compileOnly project(":annotations")
-        ksp project(":annotations")
-        kapt project(":annotations")
+        if (!project.hasProperty("noKapt")) kapt project(":annotations")
+        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
     }
 
     afterEvaluate{
         task mergedJavadoc(type: Javadoc){
-            def blacklist = [project(":ios"), project(":desktop"), project(":server"), project(":annotations")]
-            if(findProject(":android") != null){
-                blacklist += project(":android")
-            }
-
-            source rootProject.subprojects.collect{ project ->
-                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
-                    return project.sourceSets.main.allJava
+            doLast {
+                def blacklist = [project(":ios"), project(":desktop"), project(":server"), project(":annotations")]
+                if(findProject(":android") != null){
+                    blacklist += project(":android")
                 }
-            }
 
-            classpath = files(rootProject.subprojects.collect { project ->
-                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
-                    return project.sourceSets.main.compileClasspath
+                source rootProject.subprojects.collect{ project ->
+                    if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                        return project.sourceSets.main.allJava
+                    }
                 }
-            })
-            destinationDir = new File(buildDir, 'javadoc')
+
+                classpath = files(rootProject.subprojects.collect { project ->
+                    if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                        return project.sourceSets.main.compileClasspath
+                    }
+                })
+                destinationDir = new File(buildDir, 'javadoc')
+            }
         }
     }
 
@@ -435,11 +404,14 @@ project(":tests"){
 
     dependencies{
         testImplementation project(":core")
-        testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.6.20"
+        testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.7.20"
         testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.1"
         testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
         testImplementation arcModule("backends:backend-headless")
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
+        testImplementation "org.bouncycastle:bcprov-jdk15on:1.69"
+        testImplementation "org.bouncycastle:bcpkix-jdk15on:1.69"
+        testImplementation "org.bouncycastle:bctls-jdk15on:1.69"
     }
 
     test{
@@ -466,17 +438,22 @@ project(":tools"){
     }
 }
 
-project(":annotations"){
-    apply plugin: "java-library"
+configure(project(":annotations")){
+    apply plugin: "kotlin"
+
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 8
+    }
 
     dependencies{
         implementation "com.squareup:javapoet:1.12.1"
-        implementation "com.google.devtools.ksp:symbol-processing-api:1.6.20-1.0.4"
-        implementation "com.github.Anuken.Arc:arc-core:$arcHash"
+        implementation arcModule("arc-core")
     }
 }
 
-configure([":core", ":desktop", ":server", ":tools"].collect{project(it)}){
+configure([":core", ":server"].collect{project(it)}){
+    apply plugin: 'maven-publish'
     java{
         withJavadocJar()
         withSourcesJar()
